<resources>
    <string name="app_name">DemoApp</string>
    <string name="str_signup">Sign Up</string>
    <string name="hint_name">User Name</string>
    <string name="hint_email">Email Id</string>
    <string name="hint_mobile">mobile</string>
    <string name="hint_address">address</string>
    <string name="str_submit">Submit</string>
    <string name="hint_password">Password</string>
    <string name="hint_Title">Title</string>
    <string name="hint_description">Description</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="str_update">Update</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="clearcanvas">Clear Canvas</string>
    <string name="Login">Sign In</string>
    <string name="str_register_user">Register New User.</string>
    <string name="title">Title</string>
    <string name="addNote">Add Note</string>
    <string name="handwriting">Handwriting</string>
    <string name="camera">Camera</string>
    <string name="reminder">Reminder</string>
    <string name="forgotpassword">Forgot Password ?</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="country_prompt">Choose a color</string>
    <string-array name="color_arrays">
        <item>BLACK</item>
        <item>BLUE</item>
        <item>RED</item>
        <item>YELLOW</item>
        <item>GREEN</item>
        <item>CYAN</item>
        <item>MAGENTA</item>
        <item>GRAY</item>
    </string-array>

</resources>
