<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/value_30dp"
            android:layout_marginLeft="@dimen/value_16dp"
            android:layout_marginRight="@dimen/value_16dp"
            android:layout_marginTop="@dimen/value_16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_16dp">

                <EditText
                    android:id="@+id/eName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/value_40dp"
                    android:layout_marginTop="@dimen/value_30dp"
                    android:hint="@string/hint_name"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/value_5dp" />

            </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <EditText
                   android:id="@+id/eEmail"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/value_40dp"
                   android:layout_marginTop="@dimen/value_15dp"
                   android:hint="@string/hint_email"
                   android:imeOptions="actionNext"
                   android:inputType="textEmailAddress"
                   android:maxLines="1"
                   android:paddingLeft="@dimen/value_5dp" />

           </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ePasswd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/value_40dp"
                    android:layout_marginTop="@dimen/value_15dp"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/value_5dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/eMobile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/value_40dp"
                    android:layout_marginTop="@dimen/value_15dp"
                    android:hint="@string/hint_mobile"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/value_5dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/eAddres"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/value_40dp"
                    android:layout_marginTop="@dimen/value_15dp"
                    android:hint="@string/hint_address"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/value_5dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="@dimen/value_190dp"
                android:layout_height="@dimen/value_40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/value_16dp"
                android:text="@string/str_submit"
                android:textColor="@color/Whitetext"
                android:background="@color/Blue"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
