<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_notes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lcom67.demoapp.AddNotes"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <include
                android:id="@+id/tool_bar"
                layout="@layout/tool_bar">
            </include>

        </android.support.design.widget.AppBarLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_40dp"
            android:id="@+id/eTitle_notes"
            android:hint="@string/hint_Title"
            android:layout_marginTop="@dimen/value_15dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_70dp"
            android:id="@+id/eDescription"
            android:hint="@string/hint_description"
            android:layout_below="@id/eTitle_notes"
            android:layout_marginTop="@dimen/value_30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submit_notes"
            android:text="@string/str_submit"
            android:layout_marginTop="@dimen/value_70dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>
